--- a/CloneMasterDetail/CloneMasterDetail/Views/AboutPage.xaml
+++ b/CloneMasterDetail/CloneMasterDetail/Views/AboutPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CloneMasterDetail.Views.AboutPage"
-             xmlns:vm="clr-namespace:CloneMasterDetail.ViewModels;">
+             xmlns:vm="clr-namespace:CloneMasterDetail.ViewModels;"
+             Title="{Binding Title}">
     <ContentPage.BindingContext>
         <vm:AboutViewModel/>
     </ContentPage.BindingContext>
