--- a/CloneMasterDetail/CloneMasterDetail/Views/ItemsPage.xaml
+++ b/CloneMasterDetail/CloneMasterDetail/Views/ItemsPage.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CloneMasterDetail.Views.ItemsPage">
+             x:Class="CloneMasterDetail.Views.ItemsPage"
+             Title="{Binding Title}"
+             x:Name="BrowseItemsPage">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add" Clicked="AddItem_OnClicked"></ToolbarItem>
     </ContentPage.ToolbarItems>
