--- a/CloneMasterDetail/CloneMasterDetail/Views/ItemDetailPage.xaml
+++ b/CloneMasterDetail/CloneMasterDetail/Views/ItemDetailPage.xaml
@@ -2,9 +2,15 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CloneMasterDetail.Views.ItemDetailPage"
+             xmlns:my="clr-namespace:CloneMasterDetail.Views.Components"
              Title="{Binding Title}">
+    <ContentPage.Padding>
+        <OnPlatform x:TypeArguments="Thickness">
+            <On Platform="iOS" Value="0,20,0,0"/>
+        </OnPlatform>
+    </ContentPage.Padding>
     <StackLayout Spacing="20" Padding="15">
         <Label Text="{Binding Item.Text}" FontSize="Medium"/>
-        <Label Text="{Binding Item.Description}" FontSize="Small"/>
+        <my:UnderlineLabel Text="{Binding Item.Description}" FontSize="Small"/>
     </StackLayout>
 </ContentPage>
