--- a/CloneMasterDetail/CloneMasterDetail/Views/ItemDetailPage.xaml
+++ b/CloneMasterDetail/CloneMasterDetail/Views/ItemDetailPage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CloneMasterDetail.Views.ItemDetailPage"
@@ -11,6 +11,6 @@
     </ContentPage.Padding>
     <StackLayout Spacing="20" Padding="15">
         <Label Text="{Binding Item.Text}" FontSize="Medium"/>
-        <my:UnderlineLabel Text="{Binding Item.Description}" FontSize="Small"/>
+        <my:UnderlineLabel Text="{Binding Item.Description}" Tapped="UnderlineLabel_Tapped" FontSize="Small"/>
     </StackLayout>
 </ContentPage>
